--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-sudo: false
+os:
+  - linux
+  - osx
 language: go
 go:
   - 1.7.x
@@ -9,7 +11,7 @@ go:
   - 1.12.x
   - 1.13.x
   - master
-matrix:
+jobs:
   allow_failures:
     - go: master
   fast_finish: true
